# another-raytracer

./: CMakeLists.txt  install.sh
raytracer/config/: config.yaml
raytracer/lib/: CMakeLists.txt
raytracer/lib/imgui/: color.cpp  color.hpp  config.hpp  image_buffer.cpp  image_buffer.hpp  image_data.cpp  imgui_wrapper.cpp  imgui_wrapper.hpp
raytracer/lib/math/: constants.cpp  constants.hpp  intersections.cpp  intersections.hpp  mat.cpp  mat.hpp  material.cpp  material.hpp  object.cpp  object.hpp  pattern.cpp  pattern.hpp  prepare_computations.cpp  prepare_computations.hpp  ray.cpp  ray.hpp  vector2d.cpp  vector2d.hpp
raytracer/lib/primitives/: object.cpp  object.hpp  plane.cpp  plane.hpp  primitives.cpp  primitives.hpp  sphere.cpp  sphere.hpp
raytracer/lib/raytrace/: camera.cpp  camera.hpp  light.cpp  light.hpp  lighting_model.cpp  lighting_model.hpp  raytrace.hpp  raytrace_chapter05.cpp  raytrace_chapter06.cpp  world.cpp  world.hpp
raytracer/lib/utility/: logger.cpp  logger.hpp  timer.cpp  timer.hpp  world_parser.cpp  world_parser.hpp
raytracer/src/: CMakeLists.txt  main copy.cpp  main.cpp
raytracer/unit_test/: CMakeLists.txt  chapter01.cpp  chapter02.cpp  chapter03.cpp  chapter04.cpp  chapter05.cpp  chapter06.cpp  chapter07.cpp  chapter08.cpp  chapter09.cpp  chapter10.cpp  chapter11.cpp  misc.cpp
scenes/: chapter07.yaml  chapter07_2.yaml  chapter07_4.yaml
scenes/unit_test/: chapter07.yaml  chapter07_2.yaml  chapter07_3.yaml  chapter07_5.yaml  chapter08.yaml  chapter11_infinite_recursion.yaml  parsing_example.yaml
